--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-hook-form": "^7.32.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.17",
+    "sweetalert2-react-content": "^5.0.0",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
