--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^3.0.1",
     "sweetalert2": "^11.4.17",
     "sweetalert2-react-content": "^5.0.0",
     "typescript": "^4.7.3",
